k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: ai-help-agent-platform
    name: ai-help-agent
  name: ai-help-agent
